added error and edge cases refined managechargingstation steps to test business objeccts more comprehensivly again